<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/initial_page"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/initial_page" />
        <item
            android:id="@+id/meetings"
            android:icon="@drawable/ic_inbox_black_24dp"
            android:title="@string/meetings" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/appointments"
            android:icon="@drawable/ic_import_contacts_black_24dp"
            android:title="@string/appointments" />

        <item
            android:id="@+id/login"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/login" />
    </group>

</menu>
